@@ -25,8 +25,8 @@ public final class UpdateUserRequestOuterClass {
         com.google.protobuf.RuntimeVersion.validateProtobufGencodeVersion(
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
-                /* minor= */ 27,
-                /* patch= */ 2,
+                /* minor= */ 29,
+                /* patch= */ 1,
                 /* suffix= */ "",
                 UpdateUserRequestOuterClass.class.getName());
     }
@@ -76,7 +76,7 @@ public final class UpdateUserRequestOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_UpdateUserRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateUserRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateUserRequest_descriptor,
@@ -89,7 +89,7 @@ public final class UpdateUserRequestOuterClass {
                                 "CustomAttributes",});
         internal_static_im_turms_proto_UpdateUserRequest_UserDefinedAttributesEntry_descriptor =
                 internal_static_im_turms_proto_UpdateUserRequest_descriptor.getNestedTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateUserRequest_UserDefinedAttributesEntry_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateUserRequest_UserDefinedAttributesEntry_descriptor,
